# ZenlessZoneZero-OneDragon

./: .gitignore  .gitmodules  OneDragon Launcher.spec  app.bat  app.py  debug.bat  devtool-1.py  devtool-2.py  env.sample.bat  import unittest.py  installer.spec  launcher.spec  one_dragon.bat  pyproject.toml  python_run.bat  requirements-dev-ext.txt  requirements-dev.txt  requirements-gamepad.txt  requirements-prod.txt  scheduler.spec  test.py  uv.toml
.github/: README.md
.github/ISSUE_TEMPLATE/: 01-bug-common.yml  02-bug-battle-assistant.yml  02-bug-dodge-assistant.yml  03-bug-hollow-zero.yml  04-bug-lost-void.yml  bug_report.yml  config.yml
.github/workflows/: build-release.yml  check_yaml.yml  issue-automation.yml  locale-po.yml  mirrorchyan_release_note.yml  mirrorchyan_uploading.yml
.github/开发文档/: 开发指南.md  版本更新.md
assets/game_data/: coffee_data.yml  compendium_data.yml  map_area.yml
assets/image_analysis_pipelines/: boss_stun.yml  boss_stun_line.yml  full_screen_ocr.yml  lock-far.yml  lock-near.yml  ocr-abnormal.yml  ocr-normal.yml  target_stun.yml
config/: .yamllint  format.py  project.yml  push.yml  redemption_codes.yml  yaml_fixer.py  优化全配队通用可能存在的连携后发呆情况20250226测试版.7z
config/auto_battle/: Jane-Nicole-Piper.yml  [遥]11号火队-本-露西-珂蕾妲.yml  [遥]任意主C + 露西妮可 二拐一.yml  [遥]星见雅的常见配队9合1-柏柳#露妮苍丽#凯莱赛狼.yml  [遥]月城柳-柏妮思-露西.yml  [遥]艾莲-安比社长-苍角.yml  [遥]雅+柏柳#露妮苍丽#凯莱赛，8配队合1.yml  [遥]露西妮可随意二拐一.yml  [遥]青衣-丽娜-可琳.yml  attack_front.sample.yml  default_dodge.sample.yml  front_stun.sample.yml  wiki.sample.yml  专属配队-仪玄.sample.yml  专属配队-伊芙琳.sample.yml  专属配队-大安比.sample.yml  专属配队-悠真.sample.yml  专属配队-朱鸢-通用击破.sample.yml  专属配队-朱鸢.sample.yml  专属配队-柳.sample.yml  专属配队-派派.sample.yml  专属配队-简.sample.yml  专属配队-艾莲.sample.yml  专属配队-莱卡恩.sample.yml  专属配队-莱特.sample.yml  专属配队-雅.sample.yml  全配队通用.sample.yml  击破站场-强攻速切.sample.yml  双C速切+辅助.sample.yml  双异常速切+支援.sample.yml  异常站场-强攻速切.sample.yml  强攻站场-击破支援速切.sample.yml  文档讲解示例.sample.yml  朱鸢站场.sample.yml  鲨鱼2影.sample.yml  鲨鱼站场.sample.yml
config/auto_battle_operation/: 11-支援攻击.sample.yml  11号-支援攻击.sample.yml  11号-火刀4A.sample.yml  11号-火刀八连.sample.yml  anby_normal_attack.sample.yml  anby_special_attack.sample.yml  nicole_special_attack.sample.yml  zhu_yuan_normal_attack.sample.yml  zhu_yuan_special_attack.sample.yml  仪玄-凸.sample.yml  仪玄-喧嚣终结技.sample.yml  仪玄-太极合轴.sample.yml  仪玄-强化特殊技三连.sample.yml  仪玄-支援攻击.sample.yml  (+240 more)
deploy/: OneDragon Installer.spec  OneDragon Launcher.spec  OneDragon Scheduler.spec  OneDragon-Installer.spec  OneDragon-Launcher.spec  Zzz OneDragon Installer.spec  Zzz OneDragon Launcher.spec  Zzz OneDragon Scheduler.spec  build_full.bat
service/: zzz_base_scheduler.py  zzz_data_model.py  zzz_save_battle_class.py  zzz_shared_battle_service.py  zzz_syn_battle_service.py
(+1275 files in other folders)
