[project]
name = "ZenlessZoneZero-OneDragon"
version = "1.7.1"
description = "绝区零 一条龙 | 全自动 | 自动闪避 | 自动每日 | 自动空洞 | 支持手柄"
requires-python = ">=3.11.9,<=3.11.12"
dependencies = [
    "audioread==3.0.1",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "darkdetect==0.8.0",
    "decorator==5.1.1",
    "flatbuffers==24.3.25",
    "gensim==4.3.3",
    "humanfriendly==10.0",
    "idna==3.7",
    "joblib==1.4.2",
    "lazy-loader==0.4",
    "librosa==0.10.2.post1",
    "llvmlite==0.43.0",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "msgpack==1.0.8",
    "mss==9.0.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "onnxruntime-directml==1.18.0",
    "opencv-python==4.10.0.84",
    "packaging==24.1",
    "pillow==10.4.0",
    "pip-tools==7.4.1",
    "platformdirs==4.2.2",
    "polib==1.2.0",
    "pooch==1.8.2",
    "protobuf==3.20.2",
    "pyautogui==0.9.54",
    "pyclipper==1.3.0.post5",
    "pycparser==2.22",
    "pygetwindow==0.0.9",
    "pyinstaller==6.7.0",
    "pymsgbox==1.0.9",
    "pynput==1.7.7",
    "pyperclip==1.9.0",
    "pyreadline3==3.4.1",
    "pyrect==0.2.0",
    "pyscreeze==0.1.30",
    "pyside6==6.8.0.2",
    "pyside6-addons==6.8.0.2",
    "pyside6-essentials==6.8.0.2",
    "pyside6-fluent-widgets==1.7.0",
    "pysidesix-frameless-window==0.4.3",
    "pytweening==1.2.0",
    "pywin32==306",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "shapely==2.0.4",
    "shiboken6==6.8.0.2",
    "six==1.16.0",
    "smart-open==7.0.4",
    "soundcard==0.4.3",
    "soundfile==0.12.1",
    "soxr==0.4.0",
    "sympy==1.13.0",
    "threadpoolctl==3.5.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "wrapt==1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
